// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsePncUpdateDataSetXml converts XML from file phase2/tests/fixtures/PncUpdateDataSet-no-operations.xml to PncUpdateDataSet 1`] = `
{
  "AnnotatedHearingOutcome": {
    "HearingOutcome": {
      "Case": {
        "CourtCaseReferenceNumber": "23/1234/012345P",
        "CourtReference": {
          "MagistratesCourtReference": "01XX8811372",
        },
        "ForceOwner": {
          "BottomLevelCode": "00",
          "OrganisationUnitCode": "010000",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "00",
          "TopLevelCode": undefined,
        },
        "HearingDefendant": {
          "Address": {
            "AddressLine1": "2 JACOBS WOOD",
            "AddressLine2": "WATSICA LEA",
            "AddressLine3": "LITTLE HOPPE",
            "AddressLine4": undefined,
            "AddressLine5": "GS1 6LI",
          },
          "ArrestSummonsNumber": "2100000000000100019T",
          "BailConditions": [],
          "CourtPNCIdentifier": "2023/0012345P",
          "DefendantDetail": {
            "BirthDate": 1983-03-11T00:00:00.000Z,
            "Gender": 1,
            "GeneratedPNCFilename": "COLE/JOSIANE",
            "PersonName": {
              "FamilyName": "COLE",
              "GivenName": [
                "JOSIANE",
              ],
              "Title": "Mr",
            },
          },
          "Offence": [
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-02-11T00:00:00.000Z,
              },
              "ActualOffenceWording": "Between 11/02/2023 and 11/02/2023 at Hertford in
                            the county of Hertfordshire committed fraud in that you dishonestly made
                            a false representation, namely presented a false bank transfer,
                            intending to make a gain, namely PlayStation 5value of £600.00, for
                            yourself.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2023-05-01T00:00:00.000Z,
              "ChargeDate": 2023-05-01T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2023-12-19T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 1,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "FA",
                    "FullCode": "FA06001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "06",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "001",
              },
              "HomeOfficeClassification": "053/40",
              "LocationOfOffence": "No location provided",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CE",
              "OffenceTitle": "Fraud by false representation - Fraud Act 2006",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 4004,
                  "PleaStatus": "G",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment with Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": "G",
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-02-11T00:00:00.000Z,
              },
              "ActualOffenceWording": "On 11/02/2023 at Hertford in the county of
                            Hertfordshire committed fraud in that you dishonestly made a false
                            representation, namely presented a false bank transfer, intending to
                            make a gain, namely iPad to the value of £600.00,for yourself.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2023-05-01T00:00:00.000Z,
              "ChargeDate": 2023-05-01T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2023-12-19T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 2,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "FA",
                    "FullCode": "FA06001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "06",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "002",
              },
              "HomeOfficeClassification": "053/40",
              "LocationOfOffence": "No location provided",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CE",
              "OffenceTitle": "Fraud by false representation - Fraud Act 2006",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 4004,
                  "PleaStatus": "G",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment with Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": "G",
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-07-23T00:00:00.000Z,
              },
              "ActualOffenceWording": "On or in 23 August 2023 at Hertford failed without
                            reasonable cause to surrender to custody at Hertford magistrates' Court
                            having been released on bailin criminal proceedings on or in 31 July
                            2023 at Hertford",
              "AddedByTheCourt": true,
              "AlcoholLevel": undefined,
              "ArrestDate": undefined,
              "ChargeDate": undefined,
              "CommittedOnBail": "D",
              "ConvictionDate": undefined,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 3,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "BA",
                    "FullCode": "BA76001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "76",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": undefined,
              },
              "HomeOfficeClassification": "083/01",
              "LocationOfOffence": undefined,
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": false,
              "OffenceCategory": "CS",
              "OffenceTitle": "Fail to surrender to police / court bail at the appointed
                            time",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 2059,
                  "PleaStatus": "NONE",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment pre Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": undefined,
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
          ],
          "OrganisationName": undefined,
          "PNCCheckname": "COLE",
          "PNCIdentifier": "2000/0000000X",
          "ReasonForBailConditions": undefined,
          "RemandStatus": "NA",
        },
        "ManualForceOwner": undefined,
        "PTIURN": "01XX8811372",
        "PenaltyNoticeCaseReferenceNumber": undefined,
        "PreChargeDecisionIndicator": false,
        "RecordableOnPNCindicator": true,
        "Urgent": {
          "urgency": 24,
          "urgent": true,
        },
      },
      "Hearing": {
        "CourtHearingLocation": {
          "BottomLevelCode": "00",
          "OrganisationUnitCode": "B01RD00",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "RD",
          "TopLevelCode": "B",
        },
        "CourtHouseCode": 1910,
        "CourtHouseName": "Magistrates' Courts London Bromley (County Court, College Road)",
        "CourtType": "MCA",
        "DateOfHearing": 2023-12-19T00:00:00.000Z,
        "DefendantPresentAtHearing": "N",
        "HearingDocumentationLanguage": "D",
        "HearingLanguage": "D",
        "SourceReference": {
          "DocumentName": "SPI JOSIANE COLE",
          "DocumentType": "SPI Case Result",
          "UniqueID": "a20e4107-2184-4843-9d3a-3e7dca093126",
        },
        "TimeOfHearing": "10:00",
      },
    },
  },
  "Exceptions": [],
  "PncErrorMessage": undefined,
  "PncOperations": [],
  "PncQuery": {
    "checkName": "COLE",
    "courtCases": [
      {
        "courtCaseReference": "23/1234/012345P",
        "offences": [
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "4:5:322:1",
              "cjsOffenceCode": "FA06001",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 1,
              "startDate": 2023-02-11T00:00:00.000Z,
              "startTime": undefined,
              "title": "Fraud by false representation - Fraud Act 2006",
            },
          },
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "4:5:322:1",
              "cjsOffenceCode": "FA06001",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 2,
              "startDate": 2023-02-11T00:00:00.000Z,
              "startTime": undefined,
              "title": "Fraud by false representation - Fraud Act 2006",
            },
          },
        ],
      },
    ],
    "forceStationCode": "01XM",
    "penaltyCases": undefined,
    "pncId": "2000/0000000X",
  },
  "PncQueryDate": 2023-12-19T00:00:00.000Z,
}
`;

exports[`parsePncUpdateDataSetXml converts XML from file phase2/tests/fixtures/PncUpdateDataSet-unexpected-element.xml to PncUpdateDataSet 1`] = `
{
  "AnnotatedHearingOutcome": {
    "HearingOutcome": {
      "Case": {
        "CourtCaseReferenceNumber": "23/1234/012345P",
        "CourtReference": {
          "MagistratesCourtReference": "01XX8811372",
        },
        "ForceOwner": {
          "BottomLevelCode": "00",
          "OrganisationUnitCode": "010000",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "00",
          "TopLevelCode": undefined,
        },
        "HearingDefendant": {
          "Address": {
            "AddressLine1": "2 JACOBS WOOD",
            "AddressLine2": "WATSICA LEA",
            "AddressLine3": "LITTLE HOPPE",
            "AddressLine4": undefined,
            "AddressLine5": "GS1 6LI",
          },
          "ArrestSummonsNumber": "2100000000000100019T",
          "BailConditions": [],
          "CourtPNCIdentifier": "2023/0012345P",
          "DefendantDetail": {
            "BirthDate": 1983-03-11T00:00:00.000Z,
            "Gender": 1,
            "GeneratedPNCFilename": "COLE/JOSIANE",
            "PersonName": {
              "FamilyName": "COLE",
              "GivenName": [
                "JOSIANE",
              ],
              "Title": "Mr",
            },
          },
          "Offence": [
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-02-11T00:00:00.000Z,
              },
              "ActualOffenceWording": "Between 11/02/2023 and 11/02/2023 at Hertford in
                            the county of Hertfordshire committed fraud in that you dishonestly made
                            a false representation, namely presented a false bank transfer,
                            intending to make a gain, namely PlayStation 5value of £600.00, for
                            yourself.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2023-05-01T00:00:00.000Z,
              "ChargeDate": 2023-05-01T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2023-12-19T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 1,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "FA",
                    "FullCode": "FA06001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "06",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "001",
              },
              "HomeOfficeClassification": "053/40",
              "LocationOfOffence": "No location provided",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CE",
              "OffenceTitle": "Fraud by false representation - Fraud Act 2006",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 4004,
                  "PleaStatus": "G",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment with Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": "G",
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-02-11T00:00:00.000Z,
              },
              "ActualOffenceWording": "On 11/02/2023 at Hertford in the county of
                            Hertfordshire committed fraud in that you dishonestly made a false
                            representation, namely presented a false bank transfer, intending to
                            make a gain, namely iPad to the value of £600.00,for yourself.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2023-05-01T00:00:00.000Z,
              "ChargeDate": 2023-05-01T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2023-12-19T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 2,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "FA",
                    "FullCode": "FA06001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "06",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "002",
              },
              "HomeOfficeClassification": "053/40",
              "LocationOfOffence": "No location provided",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CE",
              "OffenceTitle": "Fraud by false representation - Fraud Act 2006",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 4004,
                  "PleaStatus": "G",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment with Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": "G",
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-07-23T00:00:00.000Z,
              },
              "ActualOffenceWording": "On or in 23 August 2023 at Hertford failed without
                            reasonable cause to surrender to custody at Hertford magistrates' Court
                            having been released on bailin criminal proceedings on or in 31 July
                            2023 at Hertford",
              "AddedByTheCourt": true,
              "AlcoholLevel": undefined,
              "ArrestDate": undefined,
              "ChargeDate": undefined,
              "CommittedOnBail": "D",
              "ConvictionDate": undefined,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 3,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "BA",
                    "FullCode": "BA76001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "76",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": undefined,
              },
              "HomeOfficeClassification": "083/01",
              "LocationOfOffence": undefined,
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": false,
              "OffenceCategory": "CS",
              "OffenceTitle": "Fail to surrender to police / court bail at the appointed
                            time",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 2059,
                  "PleaStatus": "NONE",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment pre Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": undefined,
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
          ],
          "OrganisationName": undefined,
          "PNCCheckname": "COLE",
          "PNCIdentifier": "2000/0000000X",
          "ReasonForBailConditions": undefined,
          "RemandStatus": "NA",
        },
        "ManualForceOwner": undefined,
        "PTIURN": "01XX8811372",
        "PenaltyNoticeCaseReferenceNumber": undefined,
        "PreChargeDecisionIndicator": false,
        "RecordableOnPNCindicator": true,
        "Urgent": {
          "urgency": 24,
          "urgent": true,
        },
      },
      "Hearing": {
        "CourtHearingLocation": {
          "BottomLevelCode": "00",
          "OrganisationUnitCode": "B01RD00",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "RD",
          "TopLevelCode": "B",
        },
        "CourtHouseCode": 1910,
        "CourtHouseName": "Magistrates' Courts London Bromley (County Court, College Road)",
        "CourtType": "MCA",
        "DateOfHearing": 2023-12-19T00:00:00.000Z,
        "DefendantPresentAtHearing": "N",
        "HearingDocumentationLanguage": "D",
        "HearingLanguage": "D",
        "SourceReference": {
          "DocumentName": "SPI JOSIANE COLE",
          "DocumentType": "SPI Case Result",
          "UniqueID": "a20e4107-2184-4843-9d3a-3e7dca093126",
        },
        "TimeOfHearing": "10:00",
      },
    },
  },
  "Exceptions": [],
  "PncErrorMessage": undefined,
  "PncOperations": [
    {
      "code": "DISARR",
      "status": "Completed",
    },
    {
      "code": "DISARR",
      "data": {
        "courtCaseReference": "07/1577/020154M",
      },
      "status": "Completed",
    },
    {
      "code": "SENDEF",
      "data": {
        "courtCaseReference": "07/1577/020154M",
      },
      "status": "Completed",
    },
    {
      "code": "SENDEF",
      "status": "Completed",
    },
    {
      "code": "NEWREM",
      "data": {
        "nextHearingDate": 2008-03-06T00:00:00.000Z,
        "nextHearingLocation": {
          "BottomLevelCode": "01",
          "OrganisationUnitCode": "B01HO01",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "HO",
          "TopLevelCode": "B",
        },
      },
      "status": "Completed",
    },
    {
      "code": "NEWREM",
      "data": {
        "nextHearingDate": 2008-03-06T00:00:00.000Z,
        "nextHearingLocation": {
          "BottomLevelCode": "03",
          "OrganisationUnitCode": "B01HO03",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "HO",
          "TopLevelCode": "B",
        },
      },
      "status": "NotAttempted",
    },
    {
      "code": "NEWREM",
      "status": "Failed",
    },
  ],
  "PncQuery": {
    "checkName": "COLE",
    "courtCases": [
      {
        "courtCaseReference": "23/1234/012345P",
        "offences": [
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "4:5:322:1",
              "cjsOffenceCode": "FA06001",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 1,
              "startDate": 2023-02-11T00:00:00.000Z,
              "startTime": undefined,
              "title": "Fraud by false representation - Fraud Act 2006",
            },
          },
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "4:5:322:1",
              "cjsOffenceCode": "FA06001",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 2,
              "startDate": 2023-02-11T00:00:00.000Z,
              "startTime": undefined,
              "title": "Fraud by false representation - Fraud Act 2006",
            },
          },
        ],
      },
    ],
    "forceStationCode": "01XM",
    "penaltyCases": undefined,
    "pncId": "2000/0000000X",
  },
  "PncQueryDate": 2023-12-19T00:00:00.000Z,
}
`;

exports[`parsePncUpdateDataSetXml converts XML from file phase2/tests/fixtures/PncUpdateDataSet-with-empty-operations.xml to PncUpdateDataSet 1`] = `
{
  "AnnotatedHearingOutcome": {
    "HearingOutcome": {
      "Case": {
        "CourtCaseReferenceNumber": "23/1234/012345P",
        "CourtReference": {
          "MagistratesCourtReference": "01XX8811372",
        },
        "ForceOwner": {
          "BottomLevelCode": "00",
          "OrganisationUnitCode": "010000",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "00",
          "TopLevelCode": undefined,
        },
        "HearingDefendant": {
          "Address": {
            "AddressLine1": "2 JACOBS WOOD",
            "AddressLine2": "WATSICA LEA",
            "AddressLine3": "LITTLE HOPPE",
            "AddressLine4": undefined,
            "AddressLine5": "GS1 6LI",
          },
          "ArrestSummonsNumber": "2100000000000100019T",
          "BailConditions": [],
          "CourtPNCIdentifier": "2023/0012345P",
          "DefendantDetail": {
            "BirthDate": 1983-03-11T00:00:00.000Z,
            "Gender": 1,
            "GeneratedPNCFilename": "COLE/JOSIANE",
            "PersonName": {
              "FamilyName": "COLE",
              "GivenName": [
                "JOSIANE",
              ],
              "Title": "Mr",
            },
          },
          "Offence": [
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-02-11T00:00:00.000Z,
              },
              "ActualOffenceWording": "Between 11/02/2023 and 11/02/2023 at Hertford in
                            the county of Hertfordshire committed fraud in that you dishonestly made
                            a false representation, namely presented a false bank transfer,
                            intending to make a gain, namely PlayStation 5value of £600.00, for
                            yourself.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2023-05-01T00:00:00.000Z,
              "ChargeDate": 2023-05-01T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2023-12-19T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 1,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "FA",
                    "FullCode": "FA06001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "06",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "001",
              },
              "HomeOfficeClassification": "053/40",
              "LocationOfOffence": "No location provided",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CE",
              "OffenceTitle": "Fraud by false representation - Fraud Act 2006",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 4004,
                  "PleaStatus": "G",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment with Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": "G",
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-02-11T00:00:00.000Z,
              },
              "ActualOffenceWording": "On 11/02/2023 at Hertford in the county of
                            Hertfordshire committed fraud in that you dishonestly made a false
                            representation, namely presented a false bank transfer, intending to
                            make a gain, namely iPad to the value of £600.00,for yourself.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2023-05-01T00:00:00.000Z,
              "ChargeDate": 2023-05-01T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2023-12-19T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 2,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "FA",
                    "FullCode": "FA06001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "06",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "002",
              },
              "HomeOfficeClassification": "053/40",
              "LocationOfOffence": "No location provided",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CE",
              "OffenceTitle": "Fraud by false representation - Fraud Act 2006",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 4004,
                  "PleaStatus": "G",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment with Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": "G",
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-07-23T00:00:00.000Z,
              },
              "ActualOffenceWording": "On or in 23 August 2023 at Hertford failed without
                            reasonable cause to surrender to custody at Hertford magistrates' Court
                            having been released on bailin criminal proceedings on or in 31 July
                            2023 at Hertford",
              "AddedByTheCourt": true,
              "AlcoholLevel": undefined,
              "ArrestDate": undefined,
              "ChargeDate": undefined,
              "CommittedOnBail": "D",
              "ConvictionDate": undefined,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 3,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "BA",
                    "FullCode": "BA76001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "76",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": undefined,
              },
              "HomeOfficeClassification": "083/01",
              "LocationOfOffence": undefined,
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": false,
              "OffenceCategory": "CS",
              "OffenceTitle": "Fail to surrender to police / court bail at the appointed
                            time",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 2059,
                  "PleaStatus": "NONE",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment pre Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": undefined,
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
          ],
          "OrganisationName": undefined,
          "PNCCheckname": "COLE",
          "PNCIdentifier": "2000/0000000X",
          "ReasonForBailConditions": undefined,
          "RemandStatus": "NA",
        },
        "ManualForceOwner": undefined,
        "PTIURN": "01XX8811372",
        "PenaltyNoticeCaseReferenceNumber": undefined,
        "PreChargeDecisionIndicator": false,
        "RecordableOnPNCindicator": true,
        "Urgent": {
          "urgency": 24,
          "urgent": true,
        },
      },
      "Hearing": {
        "CourtHearingLocation": {
          "BottomLevelCode": "00",
          "OrganisationUnitCode": "B01RD00",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "RD",
          "TopLevelCode": "B",
        },
        "CourtHouseCode": 1910,
        "CourtHouseName": "Magistrates' Courts London Bromley (County Court, College Road)",
        "CourtType": "MCA",
        "DateOfHearing": 2023-12-19T00:00:00.000Z,
        "DefendantPresentAtHearing": "N",
        "HearingDocumentationLanguage": "D",
        "HearingLanguage": "D",
        "SourceReference": {
          "DocumentName": "SPI JOSIANE COLE",
          "DocumentType": "SPI Case Result",
          "UniqueID": "a20e4107-2184-4843-9d3a-3e7dca093126",
        },
        "TimeOfHearing": "10:00",
      },
    },
  },
  "Exceptions": [],
  "PncErrorMessage": undefined,
  "PncOperations": [],
  "PncQuery": {
    "checkName": "COLE",
    "courtCases": [
      {
        "courtCaseReference": "23/1234/012345P",
        "offences": [
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "4:5:322:1",
              "cjsOffenceCode": "FA06001",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 1,
              "startDate": 2023-02-11T00:00:00.000Z,
              "startTime": undefined,
              "title": "Fraud by false representation - Fraud Act 2006",
            },
          },
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "4:5:322:1",
              "cjsOffenceCode": "FA06001",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 2,
              "startDate": 2023-02-11T00:00:00.000Z,
              "startTime": undefined,
              "title": "Fraud by false representation - Fraud Act 2006",
            },
          },
        ],
      },
    ],
    "forceStationCode": "01XM",
    "penaltyCases": undefined,
    "pncId": "2000/0000000X",
  },
  "PncQueryDate": 2023-12-19T00:00:00.000Z,
}
`;

exports[`parsePncUpdateDataSetXml converts XML from file phase2/tests/fixtures/PncUpdateDataSet-with-operations.xml to PncUpdateDataSet 1`] = `
{
  "AnnotatedHearingOutcome": {
    "HearingOutcome": {
      "Case": {
        "CourtCaseReferenceNumber": "23/1234/012345P",
        "CourtReference": {
          "MagistratesCourtReference": "01XX8811372",
        },
        "ForceOwner": {
          "BottomLevelCode": "00",
          "OrganisationUnitCode": "010000",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "00",
          "TopLevelCode": undefined,
        },
        "HearingDefendant": {
          "Address": {
            "AddressLine1": "2 JACOBS WOOD",
            "AddressLine2": "WATSICA LEA",
            "AddressLine3": "LITTLE HOPPE",
            "AddressLine4": undefined,
            "AddressLine5": "GS1 6LI",
          },
          "ArrestSummonsNumber": "2100000000000100019T",
          "BailConditions": [],
          "CourtPNCIdentifier": "2023/0012345P",
          "DefendantDetail": {
            "BirthDate": 1983-03-11T00:00:00.000Z,
            "Gender": 1,
            "GeneratedPNCFilename": "COLE/JOSIANE",
            "PersonName": {
              "FamilyName": "COLE",
              "GivenName": [
                "JOSIANE",
              ],
              "Title": "Mr",
            },
          },
          "Offence": [
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-02-11T00:00:00.000Z,
              },
              "ActualOffenceWording": "Between 11/02/2023 and 11/02/2023 at Hertford in
                            the county of Hertfordshire committed fraud in that you dishonestly made
                            a false representation, namely presented a false bank transfer,
                            intending to make a gain, namely PlayStation 5value of £600.00, for
                            yourself.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2023-05-01T00:00:00.000Z,
              "ChargeDate": 2023-05-01T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2023-12-19T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 1,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "FA",
                    "FullCode": "FA06001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "06",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "001",
              },
              "HomeOfficeClassification": "053/40",
              "LocationOfOffence": "No location provided",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CE",
              "OffenceTitle": "Fraud by false representation - Fraud Act 2006",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 4004,
                  "PleaStatus": "G",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment with Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": "G",
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-02-11T00:00:00.000Z,
              },
              "ActualOffenceWording": "On 11/02/2023 at Hertford in the county of
                            Hertfordshire committed fraud in that you dishonestly made a false
                            representation, namely presented a false bank transfer, intending to
                            make a gain, namely iPad to the value of £600.00,for yourself.",
              "AddedByTheCourt": undefined,
              "AlcoholLevel": undefined,
              "ArrestDate": 2023-05-01T00:00:00.000Z,
              "ChargeDate": 2023-05-01T00:00:00.000Z,
              "CommittedOnBail": "D",
              "ConvictionDate": 2023-12-19T00:00:00.000Z,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 2,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "FA",
                    "FullCode": "FA06001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "06",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": "002",
              },
              "HomeOfficeClassification": "053/40",
              "LocationOfOffence": "No location provided",
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": true,
              "OffenceCategory": "CE",
              "OffenceTitle": "Fraud by false representation - Fraud Act 2006",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 4004,
                  "PleaStatus": "G",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment with Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": "G",
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
            {
              "ActualOffenceDateCode": "1",
              "ActualOffenceEndDate": undefined,
              "ActualOffenceStartDate": {
                "StartDate": 2023-07-23T00:00:00.000Z,
              },
              "ActualOffenceWording": "On or in 23 August 2023 at Hertford failed without
                            reasonable cause to surrender to custody at Hertford magistrates' Court
                            having been released on bailin criminal proceedings on or in 31 July
                            2023 at Hertford",
              "AddedByTheCourt": true,
              "AlcoholLevel": undefined,
              "ArrestDate": undefined,
              "ChargeDate": undefined,
              "CommittedOnBail": "D",
              "ConvictionDate": undefined,
              "CourtCaseReferenceNumber": undefined,
              "CourtOffenceSequenceNumber": 3,
              "CriminalProsecutionReference": {
                "DefendantOrOffender": {
                  "CheckDigit": "T",
                  "DefendantOrOffenderSequenceNumber": "00000100019",
                  "OrganisationUnitIdentifierCode": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "000000",
                    "SecondLevelCode": "00",
                    "ThirdLevelCode": "00",
                    "TopLevelCode": undefined,
                  },
                  "Year": "21",
                },
                "OffenceReason": {
                  "OffenceCode": {
                    "ActOrSource": "BA",
                    "FullCode": "BA76001",
                    "Qualifier": undefined,
                    "Reason": "001",
                    "Year": "76",
                    "__type": "NonMatchingOffenceCode",
                  },
                  "__type": "NationalOffenceReason",
                },
                "OffenceReasonSequence": undefined,
              },
              "HomeOfficeClassification": "083/01",
              "LocationOfOffence": undefined,
              "ManualCourtCaseReference": undefined,
              "ManualSequenceNumber": undefined,
              "NotifiableToHOindicator": false,
              "OffenceCategory": "CS",
              "OffenceTitle": "Fail to surrender to police / court bail at the appointed
                            time",
              "RecordableOnPNCindicator": true,
              "Result": [
                {
                  "AmountSpecifiedInResult": undefined,
                  "BailCondition": [],
                  "CJSresultCode": 4576,
                  "ConvictingCourt": "1910",
                  "CourtType": "MCA",
                  "DateSpecifiedInResult": undefined,
                  "Duration": [],
                  "ModeOfTrialReason": undefined,
                  "NextCourtType": undefined,
                  "NextHearingDate": undefined,
                  "NextHearingTime": undefined,
                  "NextResultSourceOrganisation": undefined,
                  "NumberOfOffencesTIC": undefined,
                  "NumberSpecifiedInResult": undefined,
                  "OffenceRemandStatus": undefined,
                  "PNCAdjudicationExists": false,
                  "PNCDisposalType": 2059,
                  "PleaStatus": "NONE",
                  "ReasonForOffenceBailConditions": undefined,
                  "ResultApplicableQualifierCode": [],
                  "ResultClass": "Adjournment pre Judgement",
                  "ResultHalfLifeHours": 24,
                  "ResultHearingDate": 2023-12-19T00:00:00.000Z,
                  "ResultHearingType": "OTHER",
                  "ResultQualifierVariable": [
                    {
                      "Code": "CG",
                    },
                  ],
                  "ResultVariableText": "WOFN - Warrant for arrest without bailWarrant for
                                arrest without bail. Basis: no appearance in answer to bail.",
                  "SourceOrganisation": {
                    "BottomLevelCode": "00",
                    "OrganisationUnitCode": "B01RD00",
                    "SecondLevelCode": "01",
                    "ThirdLevelCode": "RD",
                    "TopLevelCode": "B",
                  },
                  "Urgent": {
                    "urgency": 24,
                    "urgent": true,
                  },
                  "Verdict": undefined,
                  "WarrantIssueDate": 2023-12-19T00:00:00.000Z,
                },
              ],
            },
          ],
          "OrganisationName": undefined,
          "PNCCheckname": "COLE",
          "PNCIdentifier": "2000/0000000X",
          "ReasonForBailConditions": undefined,
          "RemandStatus": "NA",
        },
        "ManualForceOwner": undefined,
        "PTIURN": "01XX8811372",
        "PenaltyNoticeCaseReferenceNumber": undefined,
        "PreChargeDecisionIndicator": false,
        "RecordableOnPNCindicator": true,
        "Urgent": {
          "urgency": 24,
          "urgent": true,
        },
      },
      "Hearing": {
        "CourtHearingLocation": {
          "BottomLevelCode": "00",
          "OrganisationUnitCode": "B01RD00",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "RD",
          "TopLevelCode": "B",
        },
        "CourtHouseCode": 1910,
        "CourtHouseName": "Magistrates' Courts London Bromley (County Court, College Road)",
        "CourtType": "MCA",
        "DateOfHearing": 2023-12-19T00:00:00.000Z,
        "DefendantPresentAtHearing": "N",
        "HearingDocumentationLanguage": "D",
        "HearingLanguage": "D",
        "SourceReference": {
          "DocumentName": "SPI JOSIANE COLE",
          "DocumentType": "SPI Case Result",
          "UniqueID": "a20e4107-2184-4843-9d3a-3e7dca093126",
        },
        "TimeOfHearing": "10:00",
      },
    },
  },
  "Exceptions": [],
  "PncErrorMessage": undefined,
  "PncOperations": [
    {
      "code": "DISARR",
      "status": "Completed",
    },
    {
      "code": "DISARR",
      "data": {
        "courtCaseReference": "07/1577/020154M",
      },
      "status": "Completed",
    },
    {
      "code": "SENDEF",
      "data": {
        "courtCaseReference": "07/1577/020154M",
      },
      "status": "Completed",
    },
    {
      "code": "SENDEF",
      "status": "Completed",
    },
    {
      "code": "NEWREM",
      "data": {
        "nextHearingDate": 2008-03-06T00:00:00.000Z,
        "nextHearingLocation": {
          "BottomLevelCode": "01",
          "OrganisationUnitCode": "B01HO01",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "HO",
          "TopLevelCode": "B",
        },
      },
      "status": "Completed",
    },
    {
      "code": "NEWREM",
      "data": {
        "nextHearingDate": 2008-03-06T00:00:00.000Z,
        "nextHearingLocation": {
          "BottomLevelCode": "03",
          "OrganisationUnitCode": "B01HO03",
          "SecondLevelCode": "01",
          "ThirdLevelCode": "HO",
          "TopLevelCode": "B",
        },
      },
      "status": "NotAttempted",
    },
    {
      "code": "NEWREM",
      "status": "Failed",
    },
  ],
  "PncQuery": {
    "checkName": "COLE",
    "courtCases": [
      {
        "courtCaseReference": "23/1234/012345P",
        "offences": [
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "4:5:322:1",
              "cjsOffenceCode": "FA06001",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 1,
              "startDate": 2023-02-11T00:00:00.000Z,
              "startTime": undefined,
              "title": "Fraud by false representation - Fraud Act 2006",
            },
          },
          {
            "adjudication": undefined,
            "disposals": undefined,
            "offence": {
              "acpoOffenceCode": "4:5:322:1",
              "cjsOffenceCode": "FA06001",
              "endTime": undefined,
              "qualifier1": "",
              "qualifier2": "",
              "sequenceNumber": 2,
              "startDate": 2023-02-11T00:00:00.000Z,
              "startTime": undefined,
              "title": "Fraud by false representation - Fraud Act 2006",
            },
          },
        ],
      },
    ],
    "forceStationCode": "01XM",
    "penaltyCases": undefined,
    "pncId": "2000/0000000X",
  },
  "PncQueryDate": 2023-12-19T00:00:00.000Z,
}
`;
